gitops/clusters/homelab/apps/public/proklinator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proklinator
  namespace: public
spec:
  selector:
    app: proklinator
  ports:
    - port: 80
      targetPort: 80
